<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_snackBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.autochip.trackpro.LoginActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UseLessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            tools:ignore="UseLessParent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name_o"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@color/primaryText" />

            <ScrollView
                android:id="@+id/sv_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ViewFlipper
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/ll_email_login_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="35dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_name"
                                android:imeOptions="actionNext"
                                android:inputType="textPersonName"
                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                android:maxLines="1" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_ID"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_id"
                                android:imeOptions="actionNext"
                                android:inputType="number|phone"
                                android:maxLines="1"
                                android:maxLength="10"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btn_login"
                            style="@style/Widget.AppCompat.Button"
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="60dp"
                            android:background="@drawable/cornered_button"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:text="@string/action_login"
                            android:textAllCaps="false"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@android:color/white" />

                    </LinearLayout>
                </ViewFlipper>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
