<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_snackbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/manage_users"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/circle_plus"
                android:gravity="center"
                android:text="@string/add_user"
                android:textAppearance="@android:style/TextAppearance.Medium" />


            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expandable_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="0dp"
                android:paddingStart="15dp"
                android:visibility="gone"
                app:el_duration="600"
                app:el_expanded="false">

                <LinearLayout
                    android:id="@+id/ll_dynamic_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_who_to_track"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/whom_to_track"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                android:hint="@string/prompt_name"
                                android:imeOptions="actionNext"
                                android:inputType="textPersonName"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_ID"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:maxLength="10"
                                android:hint="@string/prompt_id"
                                android:imeOptions="actionNext"
                                android:inputType="number|phone"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end">

                    <Button
                        android:id="@+id/btn_add"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:background="@drawable/cornered_button"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/add"
                        android:textAllCaps="false"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </net.cachapa.expandablelayout.ExpandableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_tracking_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="20dp"
            android:onClick="onSettingsClick"
            app:srcCompat="@drawable/arrow" />
    </LinearLayout>

</RelativeLayout>