<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_expand"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/ll_parent"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <library.CircleImageView
                    android:id="@+id/recent_rc_avatar"
                    android:layout_width="@dimen/circle_width"
                    android:layout_height="@dimen/circle_height"
                    android:layout_marginEnd="@dimen/layout_margin_rv_medium"
                    android:layout_marginStart="@dimen/layout_margin_rv_medium"/>

            </LinearLayout>-->

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recent_rc_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/secondaryText"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recent_rc_designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmallInverse"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/recent_rc_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:visibility="gone"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/recent_rc_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:visibility="gone"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/recent_rc_last_seen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="Status"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/iv_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/app_name" />


            </LinearLayout>
        </LinearLayout>
        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/rv_admin_expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            app:el_duration="300"
            app:el_expanded="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <Button
                    android:id="@+id/btn_track"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/cornered_button"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/track"
                    android:textAllCaps="false"
                    android:layout_marginEnd="2dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_remove"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/cornered_button"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/remove"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/white" />

            </LinearLayout>


            <!--<TextView
                android:id="@+id/tv_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="Content"
                android:textColor="@color/primaryText" />-->

        </net.cachapa.expandablelayout.ExpandableLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>